[-] Bug fixed.
[+] Feature added.
[*] Change.

2010-??-?? v1.70
================
* upgraded to Paranamer 2.3, MVEL 2.0.19, Spring 3.0.5.RELEASE, Commons JEXL 2.0.1, OGNL 3.0.1, Groovy 1.7.6
- fixed [ oval-Bugs-3156080 ] OVal fails to load at bean creation time
- fixed [ oval-Bugs-3173470 ] Bug in DigitsCheck
- fixed [ oval-Bugs-3175737 ] Bug while retrieving profile names from JSR group

2010-11-13 v1.61
================
- fixed [ oval-Bugs-3087277 ] @NotBlank ignores non-breaking space
- fixed @EMail not validating addresses correct if allowPersonalName=true

2010-10-13 v1.60
================
- fixed [ oval-Bugs-2994748 ] added missing French translations (thanks to Patrice Lachance)
+ added Validator.reportConstraintViolation allowing check implementations to generate more than one constraint violation
+ added overridable method AnnotationsConfigurer.newCheckInstance to allow implementation of custom check instantiation strategies 
+ fixed [ oval-Bugs-2922034 ] added support for constraints specified for method parameters at interface level: @Guard(inspectInterfaces=true) (thanks to Chris Pheby) 
- fixed a potential null reference (thanks to jacky163com)
* upgraded to OGNL 3.0, Paranamer 2.2.1, MVEL 2.0.18, Groovy 1.7.5, Spring 3.0.4.RELEASE, JRuby 1.5.3, AspectJ 1.6.9, SLF4J 1.6.1, log4j 1.2.16 
+ Validator now eagerly checks Java SecurityManager configuration for suppressAccessChecks ReflectionPermission during instantiation
+ added @<Constraint>.List annotations that can hold multiple constraint annotations of the same type
+ added @Email(allowPersonalName=true/false) (thanks to Eric Lewis)
+ added SimpleCheckWithMessageVariables (thanks to Eric Lewis)
+ added add/remove CheckInitializationListener methods to AnnotationsConfigurer and XMLConfigurer
+ added BeanInjectingCheckInitializationListener allowing Spring dependencies being injected into Check instances

2010-03-29 v1.50
================